# IPPAN

./: .dockerignore  .env.example  .gitattributes  .gitignore  .yamllint.yml  AGENTS.md  AI_CORE_BUILD_FIX_SUMMARY.md  AI_CORE_DETERMINISTIC_MATH_IMPLEMENTATION.md  AI_DETERMINISM_CI_FIX.md  AI_FEATURES_README.md  AI_GBDT_TRAINING_README.md  AI_IMPLEMENTATION_STATUS.md  AUDIT_PACKAGE_V1_RC1_2025_11_24.md  AUDIT_READY.md  AUDIT_SUMMARY.md  CARGO_DEPENDENCY_AUDIT.md  CARGO_DEPENDENCY_FIXES_APPLIED.md  CHANGELOG.md  CHECKLIST_AUDIT_MAIN.md  CI_CD_BUILD_FIXES_APPLIED.md  CI_FAILURES_FIX.md  CI_FAILURES_FIXED_2025-11-15.md  CI_STABILIZATION_COMPLETE.md  CI_STABILIZATION_SUMMARY.md  CODEBASE_FIX_STATUS.md  CODEBASE_STATUS_UPDATED.md  COMPLETED_FIXES_SUMMARY.txt  CONFLICTS_RESOLVED_FINAL.md  CONFLICT_RESOLUTION_SUMMARY.md  CONSENSUS_DLC_STATUS.md  CONSENSUS_GBDT_ANALYSIS.md  CONTRIBUTING.md  CORS_CONFLICT_FIX.md  CRATE_PRODUCTION_READINESS_ASSESSMENT.md  CRITICAL_ISSUES_SUMMARY.md  CROSS_CHAIN_IMPLEMENTATION_SUMMARY.md  CROSS_CHAIN_README.md  CURSOR_DLC_IMPLEMENTATION_SUMMARY.md  Cargo.simple.toml  Cargo.toml  (+276 more)
apps/neuro-cli/: Cargo.toml
apps/neuro-cli/src/: main.rs
crates/ai_core/: Cargo.standalone.toml  Cargo.toml  DETERMINISTIC_MATH_MIGRATION.md  README.md
crates/ai_core/benches/: dgbdt_inference_bench.rs  dgbdt_scoring.rs
crates/ai_core/examples/: gbdt_inference_demo.rs
crates/ai_core/src/: config.rs  deployment.rs  determinism.rs  deterministic_gbdt.rs  errors.rs  execution.rs  fairness.rs  feature_engineering.rs  features.rs  fixed.rs  fixed_point.rs  gbdt.rs  gbdt_legacy.rs  health.rs  lib.rs  log.rs  model.rs  model_hash.rs  model_manager.rs  models.rs  monitoring.rs  production_config.rs  security.rs  serde_canon.rs  serialization.rs  tests.rs  types.rs  validation.rs
crates/ai_core/tests/: deterministic_gbdt.rs  deterministic_gbdt.rs.disabled  deterministic_gbdt_integration.rs  deterministic_gbdt_tests.rs  deterministic_gbdt_tests.rs.disabled  fixed_determinism.rs  simple_deterministic_gbdt.rs  simple_deterministic_gbdt.rs.disabled  simple_deterministic_gbdt_test.rs  simple_deterministic_gbdt_test.rs.disabled  standalone_deterministic_gbdt_test.rs  standalone_deterministic_gbdt_test.rs.disabled  standalone_test.rs  standalone_test.rs.disabled
crates/ai_registry/: Cargo.toml  PRODUCTION_READY.md  README.md
crates/ai_registry/models/: ippan_d_gbdt_localnet_20251201T154423Z.json  ippan_d_gbdt_localnet_20251201T164813Z.json  ippan_d_gbdt_localnet_v4.json  ippan_d_gbdt_localnet_v5.json  ippan_d_gbdt_offline_20251204T141734Z.json  ippan_d_gbdt_offline_20251213.json  ippan_d_gbdt_offline_20251213T171643Z.json  ippan_d_gbdt_v2.json  ippan_d_gbdt_v3.json
crates/ai_registry/src/: activation.rs  api.rs  d_gbdt.rs  errors.rs  fees.rs  governance.rs  lib.rs  manifest.rs  proposal.rs  registry.rs  security.rs  storage.rs  types.rs
crates/ai_registry/tests/: manifest_tests.rs
crates/ai_service/: .env.example  Cargo.toml  DEPLOYMENT.md  Dockerfile.production  README.md  build.rs  docker-compose.prod.yml
crates/ai_service/config/: production.toml
crates/ai_service/deploy/: ippan-ai-service.service
crates/ai_service/examples/: production_example.rs
crates/ai_service/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml
crates/ai_service/monitoring/: prometheus.yml
crates/ai_service/nginx/: nginx.conf
crates/ai_service/scripts/: backup.sh  deploy.sh  health_check.sh  restore.sh  update.sh
crates/ai_service/secrets/: production.env.example
crates/ai_service/src/: analytics.rs  config.rs  errors.rs  fixed_math.rs  health.rs  lib.rs  llm.rs  main.rs  metrics.rs  monitoring.rs  optimization.rs  service.rs  smart_contracts.rs  types.rs
crates/ai_service/tests/: integration_tests.rs  performance_tests.rs  production_tests.rs  unit_tests.rs
crates/ai_trainer/: Cargo.toml  README.md
crates/ai_trainer/src/: cart.rs  dataset.rs  deterministic.rs  errors.rs  lib.rs  main.rs  trainer.rs
crates/ai_trainer/tests/: integration_test.rs
crates/benchmark/: Cargo.toml
crates/benchmark/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/benches/: round_processing.rs
crates/consensus/src/: ai_consensus.rs  bonding.rs  dgbdt.rs  dlc.rs  dlc_integration.rs  emission.rs  emission_tracker.rs  fees.rs  handles.rs  hashtimer_integration.rs  l1_ai_consensus.rs  lib.rs  metrics.rs  model_reload.rs  ordering.rs  parallel_dag.rs  payments.rs  reputation.rs  round.rs  round_executor.rs  shadow_verifier.rs  telemetry.rs  tests.rs  verifiable_randomness.rs.disabled
crates/consensus/tests/: ai_consensus_integration_tests.rs  ai_consensus_integration_tests.rs.disabled  dlc_integration_tests.rs  emission_integration.rs  (+3 more)
crates/consensus_dlc/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/core/: Cargo.toml  README.md
crates/crypto/: Cargo.toml  README.md
crates/economics/: Cargo.toml  README.md
crates/explorer/: Cargo.toml
crates/files/: Cargo.toml
crates/fuzz/: Cargo.toml  README.md
crates/governance/: Cargo.toml
crates/ippan_economics/: Cargo.toml  README.md
crates/keygen/: Cargo.toml
crates/l1_handle_anchors/: Cargo.toml
crates/l2_fees/: Cargo.toml
crates/l2_handle_registry/: Cargo.toml
crates/mempool/: Cargo.toml
crates/network/: Cargo.toml  README.md
crates/neuro-api/: Cargo.toml
crates/neuro-core/: Cargo.toml
crates/p2p/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_consensus_round.rs  fuzz_crypto_signatures.rs  fuzz_p2p_message.rs  fuzz_rpc_handle.rs  fuzz_rpc_payment.rs  fuzz_transaction_decode.rs
ippan/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  monitor_performance.ps1  run_cluster.ps1  run_tests.ps1  simple_test.ps1  test_10m_tps.ps1
ippan/.cargo/: config.toml
ippan/docs/: IPPAN_Minimal_PRD.md
ippan/monitoring/: prometheus.yml
ippan/testsprite_tests/: ippan_test_plan.md  run_tests.ps1  run_tests.sh  standard_prd.json
node/: Cargo.toml
node/src/: main.rs  version.rs
src/: api.rs  (+46 more)
(+1571 files in other folders)
