[workspace]
members = [
  "crates/types",
  "crates/crypto",
  "crates/storage",
  "crates/p2p",
  "crates/mempool",
  "crates/consensus",
  "crates/rpc",
  "crates/core",
  "crates/time",
  "node",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["IPPAN Contributors"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","time","sync","net","fs","signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
blake3 = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
rand_core = "0.6"
time = { version = "0.3", features = ["formatting","macros"] }
once_cell = "1"
parking_lot = "0.12"
heapless = "0.8"
winterfell = "0.13.1"
base64 = "0.21"

# Production dependencies
axum = { version = "0.7", features = ["macros", "tracing"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
sled = "0.34"
libp2p = { version = "0.53", features = ["tcp", "yamux", "noise", "gossipsub", "identify", "ping", "kad", "request-response", "serde"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
config = "0.14"
dirs = "5"
tempfile = "3"
async-trait = "0.1"
log = "0.4"
