[workspace]
members = [
  # Core Layer
  "crates/types",
  "crates/crypto",
  "crates/storage",
  "crates/network",
  "crates/p2p",
  "crates/mempool",
  "crates/consensus",
  "crates/rpc",
  "crates/core",
  "crates/time",

  # AI and deterministic intelligence
  "crates/ai_core",
  "crates/ai_registry",      # Re-enabled: fixed import paths and type issues
  "crates/ai_service",       # Re-enabled: fixing refactoring issues
  "crates/governance",       # Re-enabled: fixed dependencies on ai_registry

  # Economics and treasury
  "crates/economics",
  "crates/ippan_economics",
  "crates/treasury",
  "crates/l2_fees",
  "crates/l2_handle_registry",
  "crates/l1_handle_anchors",
  "crates/validator_resolution",

  # Security and user wallet layer
  "crates/security",
  "crates/wallet",

  # Node orchestration
  "node",                    # Re-enabled: fixed dependencies

  # DLC Consensus
  "crates/consensus_dlc",    # Deterministic Learning Consensus
  
  # Command-line tools
  "crates/cli",              # Unified CLI interface
  "crates/keygen",           # Key generation tool
  "crates/benchmark",        # Performance benchmarking tool
  "crates/explorer",         # Block explorer API gateway
]

resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["IPPAN Contributors"]

[workspace.metadata]
ippan_version = "1.0.0"

[workspace.dependencies]
# --------------------------
# Core libraries
# --------------------------
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
serde_yaml = "0.9"
hex = "0.4"
once_cell = "1"
parking_lot = "0.12"
futures = "0.3"
time = { version = "0.3", features = ["formatting", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

# --------------------------
# Async runtime & utilities
# --------------------------
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
  "net",
  "fs",
  "signal",
  "io-util"
] }
async-trait = "0.1"

# --------------------------
# Logging and tracing
# --------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# --------------------------
# Cryptography
# --------------------------
blake3 = "1"
blake2 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core", "batch"] }
rand = "0.8"
rand_core = "0.6"
argon2 = "0.5"
aes-gcm = "0.10"

# --------------------------
# Math and numeric systems
# --------------------------
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = "1.32"
heapless = "0.8"
rayon = "1.10"

# --------------------------
# Advanced cryptography / STARKs
# --------------------------
winterfell = "0.13.1"

# --------------------------
# Configuration, CLI, and I/O
# --------------------------
config = "0.14"
clap = { version = "4", features = ["derive"] }
dirs = "5"
tempfile = "3"
toml = "0.8"

# --------------------------
# Serialization formats
# --------------------------
bincode = "1.3"

# --------------------------
# Utilities
# --------------------------
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.0"
either = "1"
num_cpus = "1.0"
env_logger = "0.10"

# --------------------------
# Networking and web layer
# --------------------------
libp2p = { version = "0.53", features = [
  "tcp",
  "yamux",
  "noise",
  "gossipsub",
  "identify",
  "ping",
  "kad",
  "request-response",
  "serde",
  "mdns",
  "tokio",
  "macros",
  "relay",
  "dcutr"
] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"
igd = { version = "0.12", features = ["aio", "tokio"] }
local-ip-address = "0.6"

# --------------------------
# REST APIs and Web interfaces
# --------------------------
axum = { version = "0.7", features = ["macros", "tracing"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
warp = { version = "0.3", features = ["compression"] }

# --------------------------
# Security
# --------------------------
governor = "0.6"
validator = { version = "0.19", features = ["derive"] }

# --------------------------
# Persistence and local DB
# --------------------------
sled = "0.34"
base64 = "0.21"

# --------------------------
# WebAssembly runtime
# --------------------------
wasmtime = "24.0"
wasmtime-wasi = "24.0"

# --------------------------
# Development and testing
# --------------------------
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"

# --------------------------
# IPPAN internal crates
# --------------------------
ippan-consensus-dlc = { path = "crates/consensus_dlc" }
