[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/node", 
    "crates/wallet-cli",
    "crates/loadgen-cli",
    "crates/bench"
]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
hyper = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["batch"] }
rand = "0.8"
blake3 = "1.8"
blake2 = "0.10"
base58 = "0.2"
bs58 = "0.5"

# P2P networking
libp2p = { version = "0.53", features = ["tokio", "macros", "mdns", "kad", "gossipsub", "identify", "ping", "noise", "yamux"] }

# Concurrency and utilities
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
ahash = "0.8"

# Metrics and observability
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Serialization and utilities
bytes = "1.5"
hex = "0.4"
bincode = "1.3"
bitvec = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }



# HTTP client for wallet-cli
reqwest = { version = "0.11", features = ["json"] }

# Benchmarking
criterion = "0.5"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
