[package]
name = "ippan-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
integration-tests = []
production = []

[[bin]]
name = "ippan-node"
path = "src/main.rs"

[[bin]]
name = "ippan-check-nodes"
path = "src/bin/check_nodes.rs"

[dependencies]
ippan-types = { path = "../crates/types" }
ippan-storage = { path = "../crates/storage" }
ippan-rpc = { path = "../crates/rpc" }
ippan-consensus = { path = "../crates/consensus" }
ippan-consensus-dlc = { path = "../crates/consensus_dlc" }
ippan-p2p = { path = "../crates/p2p" }
ippan-crypto = { path = "../crates/crypto" }
ippan-mempool = { path = "../crates/mempool" }
ippan-security = { path = "../crates/security" }
ippan-files = { path = "../crates/files" }
ippan-l2-handle-registry = { path = "../crates/l2_handle_registry" }
ippan-l1-handle-anchors = { path = "../crates/l1_handle_anchors" }

anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
