[package]
name = "neuro-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
neuro-core = { path = "../../crates/neuro-core" }
neuro-ledger = { path = "../../crates/neuro-ledger" }
neuro-proto = { path = "../../crates/neuro-proto" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
