[package]
name = "ippan-ai-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["IPPAN Contributors"]
description = "Core AI utilities and deterministic evaluation helpers for IPPAN L1."

[lib]
path = "src/lib.rs"

[features]
default = []
ai_l1 = []
remote_loading = ["reqwest"]
enable-tests = []

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
hex = "0.4"
blake3 = "1"
sha2 = "0.10"
sha3 = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
base64 = "0.21"
tracing = "0.1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
  "net",
  "fs",
  "signal",
  "io-util"
] }
num_cpus = "1.0"
toml = "0.8"
tempfile = "3.0"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
rand = "0.8"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
  "net",
  "fs",
  "signal",
  "io-util"
] }
tempfile = "3.0"