[package]
name = "ippan-ai-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["IPPAN Contributors"]
description = "Core AI utilities and deterministic evaluation helpers for IPPAN L1."

[lib]
path = "src/lib.rs"

[features]
default = []
ai_l1 = []
remote_loading = ["reqwest"]
enable-tests = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
hex = { workspace = true }
blake3 = { workspace = true }
sha2 = "0.10"
sha3 = "0.10"
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
num_cpus = "1.0"
toml = "0.8"
tempfile = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
bincode = { workspace = true }
rand = "0.8"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }