[package]
name = "ippan-ai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core AI utilities and deterministic evaluation helpers for IPPAN L1."

[lib]
path = "src/lib.rs"

[features]
default = ["deterministic_math"]
ai_l1 = []
remote_loading = ["reqwest"]
enable-tests = []
deterministic_math = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
blake3 = { version = "1", default-features = false, features = ["pure"] }
sha2 = { workspace = true }
sha3 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
num_cpus = { workspace = true }
num-traits = { workspace = true }
sysinfo = "0.29"
toml = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
criterion = "0.5"

[[bench]]
name = "dgbdt_inference_bench"
harness = false
