[package]
name = "ippan-ai-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI model registry and governance interfaces for IPPAN L1."

[lib]
path = "src/lib.rs"

[dependencies]
ippan-types = { path = "../types" }
ippan-ai-core = { path = "../ai_core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
hex = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
rand = "0.8"
tracing = { workspace = true }

[dev-dependencies]
rand = "0.8"
tokio = { workspace = true }
