[package]
name = "ippan-ai-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI model registry and governance interfaces for IPPAN L1."

[lib]
path = "src/lib.rs"

[features]
default = []
# Exposes Axum-based API for registry management
api = ["axum"]

[dependencies]
ippan-types = { path = "../types" }
ippan-ai-core = { path = "../ai_core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
sled = { workspace = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true }
sha2 = { workspace = true }
pathdiff = "0.2"
toml = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
