[package]
name = "ippan-ai-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "High-level AI service layer with LLM integration for IPPAN blockchain"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ippan-ai-service"
path = "src/main.rs"

[features]
default = ["llm", "analytics", "smart_contracts"]

# LLM integration features
llm = ["reqwest"]

# Analytics and insights
analytics = ["chrono"]

# Smart contract AI features
smart_contracts = ["wasmtime", "wasmtime-wasi", "ippan-consensus"]

[dependencies]
ippan-ai-core = { path = "../ai_core" }
ippan-ai-registry = { path = "../ai_registry" }
ippan-consensus = { path = "../consensus", optional = true }
# Note: governance dependency removed to avoid circular dependencies
# ippan-governance = { path = "../governance" }
ippan-types = { path = "../types" }
ippan-crypto = { path = "../crypto" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for LLM APIs (using rustls to avoid system OpenSSL)
reqwest = { workspace = true, optional = true }

# Time handling (optional, behind analytics feature)
chrono = { workspace = true, optional = true }

# WebAssembly runtime for smart contracts
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }

# Production dependencies
toml = { workspace = true }
warp = { workspace = true }
sysinfo = "0.29"

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
toml = { workspace = true }
