[package]
name = "ippan-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "IPPAN Proof-of-Authority + AI Reputation Consensus Engine with DAG-Fair emission and deterministic block scheduling."

[features]
default = ["ai_l1"]
integration-tests = []
# Enables L1 AI for validator reputation and selection
ai_l1 = ["ippan-ai-core", "ippan-ai-registry"]

[dependencies]
ippan-types = { path = "../types" }
ippan-storage = { path = "../storage" }
ippan-crypto = { path = "../crypto" }
ippan-mempool = { path = "../mempool" }
ippan_economics = { path = "../ippan_economics" }
ippan-treasury = { path = "../treasury" }
ippan-governance = { path = "../governance" }
ippan-consensus-dlc = { path = "../consensus_dlc" }
ippan-ai-core = { path = "../ai_core", optional = true }
ippan-ai-registry = { path = "../ai_registry", optional = true }
ippan-l1-fees = { path = "../l1_fees" }
ippan-l2-handle-registry = { path = "../l2_handle_registry" }
ippan-l1-handle-anchors = { path = "../l1_handle_anchors" }

anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
blake3 = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }
