[package]
name = "ippan-consensus-dlc"
version.workspace = true
edition.workspace = true
description = "Deterministic Learning Consensus (DLC) engine for IPPAN"
license.workspace = true
authors.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Cryptography
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Time
chrono = { workspace = true }
time = { workspace = true }

# Math
rust_decimal = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }

# IPPAN crates
ippan-types = { path = "../types" }
ippan-crypto = { path = "../crypto" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
