[package]
name = "ippan-core"
version.workspace = true
edition.workspace = true
description = "Core IPPAN BlockDAG primitives with HashTimer anchoring."
license.workspace = true

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
ippan-time = { path = "../time" }
ippan-types = { path = "../types" }
libp2p = { workspace = true }
log = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sled = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
either = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
