[package]
name = "ippan-crypto"
version = "0.1.0"
edition = "2021"
authors = ["IPPAN Team"]
description = "Cryptographic primitives for the IPPAN blockchain"
license = "MIT"
repository = "https://github.com/ippan/ippan"
keywords = ["blockchain", "cryptography", "rust"]
categories = ["cryptography", "algorithms"]

[features]
default = []
stark-verification = []  # Enable full STARK proof verification (requires winterfell in production)

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

# Hashing and cryptography
ed25519-dalek = { workspace = true }
rand = "0.8"
rand_core = { workspace = true }
sha2 = "0.10"
sha3 = "0.10"
blake3 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Local workspace crates
ippan-types = { path = "../types" }

# Optional: STARK proof verification (Winterfell)
winterfell = { workspace = true, optional = true }
