[package]
name = "ippan-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cryptographic primitives for the IPPAN blockchain"
license.workspace = true
repository = "https://github.com/ippan/ippan"
keywords = ["blockchain", "cryptography", "rust"]
categories = ["cryptography", "algorithms"]

[features]
default = []
stark-verification = []  # Enable full STARK proof verification (requires winterfell in production)

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

# Hashing and cryptography
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
blake2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
hkdf = "0.12"
scrypt = "0.11"
aes-gcm = { workspace = true }

# Local workspace crates
ippan-types = { path = "../types" }

# Optional: STARK proof verification (Winterfell)
winterfell = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
